# audio-benchmark

./: .gitignore  GCP-Transcribe.ipynb  GenerateDataset.ipynb  README.md  WER.ipynb  Whisper.ipynb  pyproject.toml
data/: audios.csv  gcp-stt.csv  oci_speech.csv  whisper-large-v3-turbo.csv
data/description/: 00010.txt  00076.txt  00083.txt  00084.txt  00092.txt  00103.txt  00105.txt  00120.txt  00158.txt  00161.txt  00184.txt  00309.txt  00326.txt  00331.txt  00379.txt  00411.txt  00415.txt  00446.txt  00484.txt  00496.txt  00591.txt  00642.txt  00708.txt  00710.txt  00800.txt  00835.txt  01014.txt  01073.txt  01193.txt  01318.txt  01329.txt  01344.txt  01558.txt  01567.txt  01582.txt  01688.txt  01724.txt  01725.txt  01800.txt  01831.txt  (+59 more)
