[project]
name = "audio-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "google-cloud-storage>=2.19.0",
    "huggingface-hub[cli]>=0.27.1",
    "jupyterlab>=4.3.4",
    "langchain-google-community[speech]>=2.0.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "numba>=0.60.0",
    "python-dotenv>=1.0.1",
    "soundfile>=0.13.0",
]
